CommandSigns v1.5.3
    Rename CommandSign to CommandSigns
    Add bcs (For Bendercraft Command Signs) alias
    Check : https://github.com/Nokorbis/ar-command-signs/wiki/Updates

CommandSign v1.5.2
    Switch to maven.
    Rename the packages to 'bendercraft' (new server name)

CommandSign v1.5.1
    Add colors in the language file (and reformat languages entries)

CommandSign v1.5.0
    No more support for savefiles before 1.4.0
    Fix spelling mistake
    Reload command

CommandSign v1.4.2
    Fix spelling mistake
    Next to come : Factions requirement ?

CommangSign v1.4.1
    Fix command block per-player cooldown.

CommandSign v1.4.0
    Rework the command system to make it more maintainable (should change nothing for the users).
    /!\Rework the persistence (files) system.
    Rework the permissions system based on the plugin.yml file. (Better way)
    Create localization system
    Works on Craftbukkit and Spigot 1.8.7+

CommandSign v1.3.0
    Add more variable for commands
        - %all% for all players
        - %radius=9% (where 9 can be any number) for all players that are less that 9 blocks around the player
    Add time between usage of the command sign
        - Global
       	- Per player
    Add id to command blocks so that they can be remotely managed
        - /commandsign edit <id>
        - /commandsign delete <id>
        - /commandsign copy <id>
        - /commandsign info <id>
    Add name to command blocks (optional) (Mainly for the listing feature)
    Add a list command
        - /commandsign list [page]
    Add purge command (delete invalid command blocks) (invalid location)
    	- /commandsign purge
   	Add near command (list all command blocks in a given radius)
   	    - /commandsign near <radius>
   	Add teleport command to be teleported to a command block
   		- /commandsign tp <id>
    Bugfix : Show command instead of needed permissions when removing a command
    Bugfix : Can add many times the same command/permission