@@ -71,8 +71,13 @@ public class CommandBlockExecutor {
 
 		if (this.cmdBlock.getTimeBetweenPlayerUsage() > 0) {
 			if (this.cmdBlock.hasPlayerRecentlyUsed(this.player)) {
+				long now = System.currentTimeMillis();
+				long toWait = this.cmdBlock.getLastTimePlayerRecentlyUsed(this.player) + (this.cmdBlock.getTimeBetweenUsage()*1000) - now;
 				if (!player.hasPermission("commandsign.timer.bypass")) {
-					throw new CommandSignsException(Messages.get("usage.player_cooldown"));
+					String msg = Messages.get("usage.player_cooldown");
+					msg = msg.replace("{TIME}", df.format(this.cmdBlock.getTimeBetweenUsage() - (toWait/1000.0)));
+					msg = msg.replace("{REMAINING}", df.format(toWait/1000.0));
+					throw new CommandSignsException(msg);
 				}
 			}
 		}
