@@ -51,7 +51,7 @@ info.reload_errors                      = &eSome errors ({ERRORS}) happened duri
 usage.invalid_player                    = &cInvalid player.
 usage.miss_needed_permission            = &cYou do not have the needed permission : {NEEDED_PERM} .
 usage.general_cooldown                  = &cThis command block has been used {TIME} seconds ago. You must wait {REMAINING} more seconds.
-usage.player_cooldown                   = &cYou have already used this command block recently. Please wait a moment.
+usage.player_cooldown                   = &cYou have already used this command block {TIME} seconds ago. You must wait {REMAINING} more seconds.
 usage.not_enough_money                  = &cYou do NOT have enough money (&d{PRICE}&c) to use this command block.
 usage.you_paied                         = &eYou have payed &d{PRICE} &eto use this command block.
 usage.execution_cancelled               = &cCommand sign execution cancelled.
